cleaned up old sb-instance code